--- a/src/App.css
+++ b/src/App.css
@@ -88,14 +88,66 @@ a {
 /*:::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::*/
 /*:::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::*/
 
-/* :::::::::::::::::::::::::  :::::::::::::::::::::::::::::::: */
-/* End  */
+/* :::::::::::::::::::::::::  Navbar Component :::::::::::::::::::::::::::::::: */
+.desktop-nav {
+  width: 100%;
+  background: white;
+  box-shadow: 1px 1px 10px #9b9b9b2f;
+  padding: 0.7rem 0rem;
+}
+.desktop-nav-inside {
+  width: 97%;
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+/* Logotype */
+.logo-text {
+  font-family: var(--LogoFont);
+  font-style: italic;
+  letter-spacing: 2px;
+  font-size: 2rem;
+  color: var(--CtaColor);
+}
+/* Links */
+.desktop-links {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.desktop-link {
+  font-family: var(--TitleFont);
+  text-transform: uppercase;
+  letter-spacing: 1.3px;
+  margin-left: 2rem;
+  font-weight: 500;
+  color: var(--FontGrayColor);
+}
+/* End Navbar Component */
 
-/* :::::::::::::::::::::::::  :::::::::::::::::::::::::::::::: */
-/* End  */
+/* ::::::::::::::::::::::::: Banner Component :::::::::::::::::::::::::::::::: */
+.banner-sect {
+  position: relative;
+  min-height: 89vh;
+}
+.single-arrow {
+  font-size: 5rem;
+  color: var(--FontGrayColor);
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  left: 0;
+  transform: translateY(-50%);
+}
+.right-arrow {
+  left: 50;
+}
+/* End  Banner Component*/
 
-/* :::::::::::::::::::::::::  :::::::::::::::::::::::::::::::: */
-/* End  */
+/* ::::::::::::::::::::::::: Home Page :::::::::::::::::::::::::::::::: */
+
+/* End Home Page  */
 
 /* :::::::::::::::::::::::::  :::::::::::::::::::::::::::::::: */
 /* End  */
