--- a/src/App.css
+++ b/src/App.css
@@ -129,19 +129,39 @@ a {
 /* ::::::::::::::::::::::::: Banner Component :::::::::::::::::::::::::::::::: */
 .banner-sect {
   position: relative;
-  min-height: 89vh;
+  max-height: 89vh;
 }
 .single-arrow {
-  font-size: 5rem;
+  font-size: 4rem;
   color: var(--FontGrayColor);
   cursor: pointer;
   position: absolute;
   top: 50%;
-  left: 0;
   transform: translateY(-50%);
+  transition: var(--MainTransition);
+  z-index: 2;
+}
+.single-arrow:hover {
+  color: black;
+}
+.left-arrow {
+  left: 0;
+  margin-left: 0.7rem;
 }
 .right-arrow {
-  left: 50;
+  right: 0;
+  margin-right: 0.7rem;
+}
+/* Image Container */
+.slider-img-container {
+  width: 100%;
+  height: 89vh;
+}
+/* Single Image */
+.slide-img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 /* End  Banner Component*/
 
