--- a/src/App.css
+++ b/src/App.css
@@ -12,6 +12,7 @@
 html {
   font-family: 'Roboto', sans-serif;
   background-color: var(--BgColor);
+  overflow: hidden;
 }
 ul {
   list-style: none;
@@ -94,6 +95,9 @@ a {
   background: white;
   box-shadow: 1px 1px 10px #9b9b9b2f;
   padding: 0.7rem 0rem;
+  position: fixed;
+  top: 0;
+  z-index: 1000;
 }
 .desktop-nav-inside {
   width: 97%;
@@ -127,19 +131,37 @@ a {
 /* End Navbar Component */
 
 /* ::::::::::::::::::::::::: Banner Component :::::::::::::::::::::::::::::::: */
+/* Z INDEX ---> BG = 0 , Text = 1, IMGS= 2, ARROWS= 3 */
 .banner-sect {
   position: relative;
-  max-height: 89vh;
+  height: 100vh;
 }
+/* Background Text */
+.slider-text {
+  width: 100%;
+  position: absolute;
+  top: 60%;
+  left: -5%;
+  transform: translateY(-50%);
+  font-size: 30rem;
+  font-family: var(--TitleFont);
+  text-transform: uppercase;
+  font-style: italic;
+  text-align: center;
+  z-index: 1;
+  color: var(--GrayColor);
+  opacity: 0.2;
+}
+/* Arrows */
 .single-arrow {
   font-size: 4rem;
   color: var(--FontGrayColor);
   cursor: pointer;
   position: absolute;
-  top: 50%;
+  top: 55%;
   transform: translateY(-50%);
   transition: var(--MainTransition);
-  z-index: 2;
+  z-index: 3;
 }
 .single-arrow:hover {
   color: black;
@@ -152,10 +174,30 @@ a {
   right: 0;
   margin-right: 0.7rem;
 }
-/* Image Container */
+/* Image and Article CONTAINER = Section-Center */
+.slider-img-center {
+  position: relative;
+  top: 7rem;
+  width: 70%;
+  height: 30rem;
+  margin: 0 auto;
+  text-align: center;
+  transition: var(--MainTransition);
+  z-index: 3;
+  overflow: hidden;
+  display: flex;
+}
+/* Image Container = Article */
 .slider-img-container {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   width: 100%;
-  height: 89vh;
+  height: 100%;
+  margin: 0 auto;
+  transition: var(--MainTransition);
+  opacity: 0;
 }
 /* Single Image */
 .slide-img {
@@ -163,6 +205,18 @@ a {
   height: 100%;
   object-fit: cover;
 }
+/* Dynamic Styles for Slider */
+.activeSlide {
+  opacity: 1;
+  transform: translateX(0);
+}
+.lastSlide {
+  transform: translateX(-100%);
+}
+.nextSlide {
+  transform: translateX(100%);
+}
+
 /* End  Banner Component*/
 
 /* ::::::::::::::::::::::::: Home Page :::::::::::::::::::::::::::::::: */
