--- a/src/App.css
+++ b/src/App.css
@@ -12,6 +12,8 @@
 html {
   font-family: 'Roboto', sans-serif;
   background-color: var(--BgColor);
+}
+body {
   overflow: hidden;
 }
 ul {
@@ -89,6 +91,10 @@ a {
 /*:::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::*/
 /*:::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::*/
 
+/* ::::::::::::::::::::::::: Home Page :::::::::::::::::::::::::::::::: */
+
+/* End Home Page  */
+
 /* :::::::::::::::::::::::::  Navbar Component :::::::::::::::::::::::::::::::: */
 .desktop-nav {
   width: 100%;
@@ -135,76 +141,67 @@ a {
 .banner-sect {
   position: relative;
   height: 100vh;
-}
-/* Background Text */
-.slider-text {
-  width: 100%;
-  position: absolute;
-  top: 60%;
-  left: -5%;
-  transform: translateY(-50%);
-  font-size: 30rem;
-  font-family: var(--TitleFont);
-  text-transform: uppercase;
-  font-style: italic;
-  text-align: center;
-  z-index: 1;
-  color: var(--GrayColor);
-  opacity: 0.2;
+  /* GSAP */
+  opacity: 0;
 }
 /* Arrows */
 .single-arrow {
-  font-size: 4rem;
-  color: var(--FontGrayColor);
-  cursor: pointer;
   position: absolute;
   top: 55%;
-  transform: translateY(-50%);
+  font-size: 4rem;
+  color: var(--FontGrayColor);
+
   transition: var(--MainTransition);
-  z-index: 3;
+  z-index: 2;
+  width: 100%;
+  opacity: 1;
 }
-.single-arrow:hover {
+.left-arrow:hover,
+.right-arrow:hover {
   color: black;
 }
 .left-arrow {
   left: 0;
   margin-left: 0.7rem;
+  cursor: pointer;
 }
 .right-arrow {
+  position: absolute;
   right: 0;
   margin-right: 0.7rem;
+  cursor: pointer;
 }
-/* Image and Article CONTAINER = Section-Center */
-.slider-img-center {
+/*  ------> Image Slider */
+
+/* Container outside MAP (section-center for John) */
+.slider-images-container {
+  margin: 0 auto;
   position: relative;
-  top: 7rem;
-  width: 70%;
+  width: 70vw;
+  height: 100%;
+  text-align: center;
+  display: flex;
+  overflow: hidden;
+}
+/* Article containing IMG */
+.image-container {
+  position: absolute;
+  top: 18%;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  opacity: 0;
+  transition: var(--MainTransition);
+}
+/* Img itself */
+.slide-image {
+  width: 55rem;
   height: 30rem;
   margin: 0 auto;
-  text-align: center;
-  transition: var(--MainTransition);
-  z-index: 3;
-  overflow: hidden;
-  display: flex;
-}
-/* Image Container = Article */
-.slider-img-container {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  width: 100%;
-  height: 100%;
-  margin: 0 auto;
-  transition: var(--MainTransition);
-  opacity: 0;
-}
-/* Single Image */
-.slide-img {
-  width: 100%;
-  height: 100%;
   object-fit: cover;
+  z-index: 3;
 }
+
 /* Dynamic Styles for Slider */
 .activeSlide {
   opacity: 1;
@@ -216,12 +213,7 @@ a {
 .nextSlide {
   transform: translateX(100%);
 }
-
 /* End  Banner Component*/
-
-/* ::::::::::::::::::::::::: Home Page :::::::::::::::::::::::::::::::: */
-
-/* End Home Page  */
 
 /* :::::::::::::::::::::::::  :::::::::::::::::::::::::::::::: */
 /* End  */
