--- a/src/App.css
+++ b/src/App.css
@@ -134,6 +134,9 @@ a {
   font-weight: 500;
   color: var(--FontGrayColor);
 }
+.desktop-link:hover {
+  color: black;
+}
 /* End Navbar Component */
 
 /* ::::::::::::::::::::::::: Banner Component :::::::::::::::::::::::::::::::: */
@@ -147,29 +150,28 @@ a {
 /* Arrows */
 .single-arrow {
   position: absolute;
-  top: 55%;
-  font-size: 4rem;
+  top: 40%;
+  font-size: 12rem;
   color: var(--FontGrayColor);
-
-  transition: var(--MainTransition);
   z-index: 2;
   width: 100%;
   opacity: 1;
 }
 .left-arrow:hover,
 .right-arrow:hover {
-  color: black;
+  color: crimson;
 }
 .left-arrow {
-  left: 0;
-  margin-left: 0.7rem;
+  position: absolute;
+  left: -2%;
   cursor: pointer;
+  transition: var(--MainTransition);
 }
 .right-arrow {
   position: absolute;
-  right: 0;
-  margin-right: 0.7rem;
+  right: -2%;
   cursor: pointer;
+  transition: var(--MainTransition);
 }
 /*  ------> Image Slider */
 
@@ -177,8 +179,9 @@ a {
 .slider-images-container {
   margin: 0 auto;
   position: relative;
-  width: 70vw;
-  height: 100%;
+  top: 15%;
+  width: 96vw;
+  height: 80%;
   text-align: center;
   display: flex;
   overflow: hidden;
@@ -186,22 +189,21 @@ a {
 /* Article containing IMG */
 .image-container {
   position: absolute;
-  top: 18%;
+  top: 0%;
   left: 0;
   width: 100%;
   height: 100%;
   opacity: 0;
-  transition: var(--MainTransition);
+  transition: 0.7s ease-in-out all;
 }
 /* Img itself */
 .slide-image {
-  width: 55rem;
-  height: 30rem;
+  width: 90%;
+  height: 100%;
   margin: 0 auto;
   object-fit: cover;
   z-index: 3;
 }
-
 /* Dynamic Styles for Slider */
 .activeSlide {
   opacity: 1;
@@ -212,6 +214,14 @@ a {
 }
 .nextSlide {
   transform: translateX(100%);
+}
+.deco-text {
+  position: absolute;
+  top: 8%;
+  left: -5%;
+  font-size: 27rem;
+  color: var(--FontGrayColor);
+  opacity: 0.3;
 }
 /* End  Banner Component*/
 
