--- a/src/App.css
+++ b/src/App.css
@@ -232,7 +232,7 @@ a {
 /* :::::::::::::::::::::::::  About Page :::::::::::::::::::::::::::::::: */
 /* Block Scroll */
 .block {
-  height: 100vh;
+  height: 100%;
   display: flex;
   width: 140vw;
 }
@@ -241,6 +241,7 @@ a {
   height: 100vh;
   position: relative;
 }
+
 /* Titulo de Fondo */
 .about-title {
   position: absolute;
@@ -306,7 +307,8 @@ a {
   position: absolute;
   top: 10%;
   left: 42%;
-  width: 40rem;
+  width: 50rem;
+  box-shadow: 1px 1px 25px rgba(151, 151, 151, 0.46);
 }
 .about-img {
   width: 100%;
@@ -316,14 +318,19 @@ a {
 /* Description */
 .about-description {
   position: absolute;
-  top: 30%;
-  left: 80%;
+  top: 27%;
+  left: 94%;
   width: 30%;
   margin: 0 auto;
   text-align: center;
+  font-size: 1.1rem;
   color: var(--GrayColor);
   font-family: var(--TextsFont);
   letter-spacing: 2px;
+  transition: var(--MainTransition);
+}
+.about-description:hover {
+  transform: scale(1.05);
 }
 /* End About Page */
 
